# rustydemon

./: .gitignore  AGENT.md  COMMERCIAL.md  Cargo.toml  README.md  d4_tact_keys_clean.txt  release.sh  ssh.exe.stackdump
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
research/d4/: kmt-memory-scanning.md  movie-stubs.md  ptr_dump.py  ptr_layout.py  tact_scan.py
rustydemon/: Cargo.toml
rustydemon-blp2/: CREDITS  Cargo.toml
rustydemon-blp2/src/: blp.rs  dxt.rs  error.rs  lib.rs
rustydemon-blp2/tests/: integration_test.rs
rustydemon-cli/: Cargo.toml
rustydemon-cli/examples/: gen_icons.rs
rustydemon-cli/src/: inspect.rs  main.rs  render.rs
rustydemon-gr2/: Cargo.toml
rustydemon-gr2/examples/: info.rs  probe.rs
rustydemon-gr2/src/: bitknit.rs  element.rs  error.rs  file_info.rs  granny_file.rs  header.rs  lib.rs  mesh.rs  reference.rs  section.rs
rustydemon-lib/: Cargo.toml
rustydemon-lib/examples/: probe_archive_index.rs  probe_local_archive_indices.rs
rustydemon-lib/src/: archive_index.rs  blte.rs  cdn.rs  config.rs  encoding.rs  entry.rs  error.rs  game.rs  handler.rs  jenkins96.rs  key_service.rs  lib.rs  local_index.rs  query.rs  salsa20.rs  search.rs  static_container.rs  types.rs
rustydemon-lib/src/root/: d4.rs  install.rs  mndx.rs  mod.rs  s1.rs  tvfs.rs  wow.rs
rustydemon/src/: app.rs  audio.rs  main.rs  pow_preview.rs  tex_preview.rs  text_preview.rs  vid_preview.rs
rustydemon/src/deep_search/: mod.rs  pow.rs
rustydemon/src/preview/: adt.rs  audio.rs  blp.rs  m2.rs  mod.rs  model3d.rs  model_d2r.rs  pcx.rs  pow.rs  tex.rs  text.rs  texture.rs  vid.rs
rustydemon/src/ui/: about.rs  menu.rs  mod.rs  preview.rs  results.rs  theme.rs  tree.rs
rustydemon/src/viewport3d/: mod.rs
scripts/: ci-check.sh  install-git-hooks.sh  regress.sh
