[workspace]
members = [
    "rustydemon-blp2",
    "rustydemon-lib",
    "rustydemon",
    "rustydemon-cli",
]
resolver = "2"

# ── Shared package metadata ────────────────────────────────────────────────────
# All member crates inherit these fields with `field.workspace = true`.
# Bumping the version here bumps every crate simultaneously.
[workspace.package]
version     = "0.3.1"
authors     = ["jabberwock"]
edition     = "2021"
license     = "AGPL-3.0-or-later"
repository  = "https://github.com/HoldMyBeer-gg/rustydemon"

# ── cargo-dist configuration ──────────────────────────────────────────────────
[workspace.metadata.dist]
# CI backends to generate workflows for
ci = "github"
# Target platforms
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Installers to generate
installers = ["shell", "powershell"]
# Create GitHub Releases
create-release = true
# Only distribute the GUI binary
dist = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
