[package]
name         = "rustydemon-cli"
description  = "Headless batch exporter for CASC archives (Rusty Demon CLI)"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "rustydemon-cli"
path = "src/main.rs"

[dependencies]
rustydemon-lib = { path = "../rustydemon-lib", version = "0.3.0", features = ["cdn"] }
clap           = { version = "4", features = ["derive"] }
rayon          = "1"
indicatif      = "0.17"
anyhow         = "1"
