[package]
name         = "rustydemon-cli"
description  = "Headless batch exporter for CASC archives (Rusty Demon CLI)"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "rustydemon-cli"
path = "src/main.rs"

[dependencies]
rustydemon-lib  = { path = "../rustydemon-lib", version = "0.3.0", features = ["cdn"] }
rustydemon-blp2 = { path = "../rustydemon-blp2" }
rustydemon-gr2  = { path = "../rustydemon-gr2" }
wow-wmo          = "0.6.4"
wow-alchemy-m2   = "0.2.0"
wow-alchemy-data = "0.2.0"
texture2ddecoder = "0.1"
wgpu             = "22"
bytemuck         = { version = "1", features = ["derive"] }
glam             = "0.29"
image            = { version = "0.25", default-features = false, features = ["png"] }
pollster         = "0.4"
clap             = { version = "4", features = ["derive"] }
rayon            = "1"
indicatif        = "0.17"
anyhow           = "1"
