[package]
name        = "rustydemon"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "CASC archive explorer — cross-platform GUI"

[[bin]]
name = "rustydemon"
path = "src/main.rs"

[dependencies]
rustydemon-lib  = { path = "../rustydemon-lib" }
rustydemon-blp2 = { path = "../rustydemon-blp2" }
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui        = "0.29"
rfd         = "0.15"
image       = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
