[package]
name        = "rustydemon"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "CASC archive explorer — cross-platform GUI"

[[bin]]
name = "rustydemon"
path = "src/main.rs"

[dependencies]
rustydemon-lib  = { path = "../rustydemon-lib" }
rustydemon-blp2 = { path = "../rustydemon-blp2" }
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui        = "0.29"
egui-wgpu   = "0.29"
wgpu        = "22"
bytemuck    = { version = "1", features = ["derive"] }
glam        = "0.29"
wow-wmo     = "0.6.4"
wow-alchemy-m2   = "0.2.0"
wow-alchemy-data = "0.2.0"
rfd         = "0.15"
image       = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
texture2ddecoder = "0.1"
